--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,5 +1,5 @@
 <ion-view title="Dashboard">
-  <ion-content class="padding">
-    <h1>Dash</h1>
+  <ion-content class="padding" style="text-align:center">
+    <h1>Welcome to GT Night Walkers</h1>
   </ion-content>
 </ion-view>
