--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -2,4 +2,7 @@
   <ion-content class="padding">
     <h1>Account</h1>
   </ion-content>
+  <ion-content ng-controller="AccountCtrl">
+    <div id="map" data-tap-disabled="true"></div>
+</ion-content>
 </ion-view>
