--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,8 +1,6 @@
 <ion-view title="Account">
-  <ion-content class="padding">
-    <h1>Account</h1>
-  </ion-content>
-  <ion-content ng-controller="AccountCtrl">
+  <ion-content class="padding" ng-controller="AccountCtrl">
+  <h1>Account</h1>
     <div id="map" data-tap-disabled="true"></div>
 </ion-content>
 </ion-view>
