--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,6 +1,5 @@
 <ion-view title="Account">
-  <ion-content class="padding" ng-controller="AccountCtrl">
-  <h1>Account</h1>
+  <ion-content ng-controller="AccountCtrl">
     <div id="map" data-tap-disabled="true"></div>
 </ion-content>
 </ion-view>
