--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,13 +1,8 @@
 <ion-view title="Account">
-  <ion-content ng-controller="AccountCtrl">
-    <ion-header-bar class="bar-dark" >
-      <h1 class="title">Map</h1>
-    </ion-header-bar>
-    <ion-content>
-      <div id="map" data-tap-disabled="true"></div>
-    </ion-content>
-    <ion-footer-bar class="bar-dark">
-      <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate">My Location</a>
-    </ion-footer-bar>
-</ion-content>
+    <ion-content class="has-header padding" ng-controller="AccountCtrl">
+    <h1>Map</h1>
+      <p>{{centerLat}}:{{centerLng}}</p>
+      <div ng-show="mapVisible" id="map"></div>
+  </ion-content>
+  </ion-content>
 </ion-view>
