--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,7 +1,5 @@
 <ion-view title="Account">
-    <ion-content class="has-header padding" ng-controller="AccountCtrl">
-    <h1>Map</h1>
-      <div ng-show="mapVisible" id="map"></div>
-  </ion-content>
+  <ion-content class="padding">
+    <h1>Account</h1>
   </ion-content>
 </ion-view>
