--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,5 +1,21 @@
 <ion-view title="Dashboard">
+<ion-header-bar class="bar-dark">
+    <h1 class="title">Login</h1>
+  </ion-header-bar>
   <ion-content class="has-header padding">
-    <h1>Dash</h1>
+    
+  <form ng-submit="login(user)">
+        <div class="padding">
+          <label class="item item-input">
+            <input type="text" placeholder="Username:" ng-model="user.name">
+          </label>
+		  <label class="item item-input">
+            <input type="password" placeholder="Password:" ng-model="user.pwd">
+          </label>
+        </div>
+        <div class="padding">
+          <button type="submit" class="button button-block button-positive">Submit</button>
+        </div>
+      </form>
   </ion-content>
 </ion-view>
