--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,6 +11,7 @@
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
+  <span ng-show='user()'>
     <!-- map Tab -->
     <ion-tab title="Map" icon="icon ion-map" href="#/tab/map">
         <ion-nav-view name="tab-map"></ion-nav-view>
@@ -24,9 +25,11 @@
 
 
   <!-- About Tab -->
+  
   <ion-tab title="Account" icon="icon ion-gear-b" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
+  </span>
 
 
 </ion-tabs>
