--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,9 +1,8 @@
 <ion-view title="Dashboard">
-<ion-header-bar class="bar-dark">
-    <h1 class="title">Login</h1>
-  </ion-header-bar>
-  <ion-content class="has-header padding">
     
+  
+  <ion-content class="padding">
+    <h1 class="title">Login</h1>
   <form ng-submit="login(user)">
         <div class="padding">
           <label class="item item-input">
