--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -4,7 +4,7 @@
   </ion-header-bar>
   <ion-content class="has-header padding">
     
-  
+  <form ng-submit="login(user)">
         <div class="padding">
           <label class="item item-input">
             <input type="text" placeholder="Username:" ng-model="user.name">
@@ -16,6 +16,6 @@
         <div class="padding">
           <button type="submit" class="button button-block button-positive">Submit</button>
         </div>
-      
+      </form>
   </ion-content>
 </ion-view>
