--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,7 +11,7 @@
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
-  <span ng-if='login'>
+  <span ng-if="loginUsr">
     <!-- map Tab -->
     <ion-tab title="Map" icon="icon ion-map" href="#/tab/map">
         <ion-nav-view name="tab-map"></ion-nav-view>
