--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -4,18 +4,17 @@
   </ion-header-bar>
   <ion-content class="has-header padding">
     
-  <form ng-submit="login(user)">
+  
         <div class="padding">
           <label class="item item-input">
-            <input type="text" placeholder="Username:" ng-model="user.name">
+            <input type="text" placeholder="Username:">
           </label>
 		  <label class="item item-input">
-            <input type="password" placeholder="Password:" ng-model="user.pwd">
+            <input type="password" placeholder="Password:" >
           </label>
         </div>
         <div class="padding">
           <button type="submit" class="button button-block button-positive">Submit</button>
         </div>
-      </form>
   </ion-content>
 </ion-view>
