--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,20 +1,13 @@
 <ion-view title="Dashboard">
-<ion-header-bar class="bar-dark">
-    <h1 class="title">Login</h1>
-  </ion-header-bar>
-  <ion-content class="has-header padding">
-    
-  
-        <div class="padding">
+
+  <ion-content class="padding">
+  <h1 class="title">Login</h1>
           <label class="item item-input">
             <input type="text" placeholder="Username:">
           </label>
 		  <label class="item item-input">
             <input type="password" placeholder="Password:" >
           </label>
-        </div>
-        <div class="padding">
           <button type="submit" class="button button-block button-positive">Submit</button>
-        </div>
   </ion-content>
 </ion-view>
