--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -3,8 +3,7 @@
     <h1 class="title">Login</h1>
   </ion-header-bar>
   <ion-content class="has-header padding">
-    
-  <form ng-submit="login(user)">
+
         <div class="padding">
           <label class="item item-input">
             <input type="text" placeholder="Username:" ng-model="user.name">
@@ -13,9 +12,7 @@
             <input type="password" placeholder="Password:" ng-model="user.pwd">
           </label>
         </div>
-        <div class="padding">
-          <button type="submit" class="button button-block button-positive">Submit</button>
-        </div>
-      </form>
+        <a class="button" href="#/tab/map">Submit</a>
+
   </ion-content>
 </ion-view>
