--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,25 +11,22 @@
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
-  <span ng-if="$root.Data.loginUsr">
     <!-- map Tab -->
-    <ion-tab title="Map" icon="icon ion-map" href="#/tab/map">
+    <ion-tab title="Map" icon="icon ion-map" href="#/tab/map" hidden="true">
         <ion-nav-view name="tab-map"></ion-nav-view>
     </ion-tab>
 
 
     <!-- Adopt Tab -->
-  <ion-tab title="Friends" icon="icon ion-heart" href="#/tab/friends">
+  <ion-tab title="Friends" icon="icon ion-heart" href="#/tab/friends" hidden="true">
     <ion-nav-view name="tab-friends"></ion-nav-view>
   </ion-tab>
 
 
   <!-- About Tab -->
   
-  <ion-tab title="Account" icon="icon ion-gear-b" href="#/tab/account">
+  <ion-tab title="Account" icon="icon ion-gear-b" href="#/tab/account" hidden="true">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
-  </span>
-
 
 </ion-tabs>
