--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -12,20 +12,20 @@
   </ion-tab>
 
     <!-- map Tab -->
-    <ion-tab title="Map" icon="icon ion-map" href="#/tab/map" hidden="true">
+    <ion-tab title="Map" icon="icon ion-map" href="#/tab/map">
         <ion-nav-view name="tab-map"></ion-nav-view>
     </ion-tab>
 
 
     <!-- Adopt Tab -->
-  <ion-tab title="Friends" icon="icon ion-heart" href="#/tab/friends" hidden="true">
+  <ion-tab title="Friends" icon="icon ion-heart" href="#/tab/friends">
     <ion-nav-view name="tab-friends"></ion-nav-view>
   </ion-tab>
 
 
   <!-- About Tab -->
   
-  <ion-tab title="Account" icon="icon ion-gear-b" href="#/tab/account" hidden="true">
+  <ion-tab title="Account" icon="icon ion-gear-b" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
