--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -3,6 +3,9 @@
     <h1>Map</h1>
       <p>{{centerLat}}:{{centerLng}}</p>
       <div ng-show="mapVisible" id="map"></div>
-  </ion-content>
+		<label class="item item-input">
+  <span class="input-label">Time</span>
+  <input type="time">
+</label>
   </ion-content>
 </ion-view>
