--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -12,7 +12,8 @@
             <input type="password" placeholder="Password:" ng-model="user.pwd">
           </label>
         </div>
+		<div class="padding">
         <a class="button" href="#/tab/map">Submit</a>
-
+		</div>
   </ion-content>
 </ion-view>
