--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -1,11 +1,18 @@
 <ion-view title="Map">
   <ion-content class="has-header padding">
+  <div class="padding">
     <h1>Map</h1>
       <p>{{centerLat}}:{{centerLng}}</p>
       <div ng-show="mapVisible" id="map"></div>
+	  </div>
+		<div class="padding">
 		<label class="item item-input">
   <span class="input-label">Time</span>
   <input type="time">
 </label>
+</div>
+		<div class="padding">
+        <a class="button" href="#/tab/friends">Submit</a>
+		</div>
   </ion-content>
 </ion-view>
