--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -3,8 +3,9 @@
   <div class="padding">
     <h1>Map</h1>
       <p>{{centerLat}}:{{centerLng}}</p>
-      <div ng-show="mapVisible" id="map"></div>
 	  </div>
+      <div ng-show="mapVisible" id="map" class="padding"></div>
+	  
 		<div class="padding">
 		<label class="item item-input">
   <span class="input-label">Time</span>
