--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -1,7 +1,7 @@
 <ion-view title="Map">
   <ion-content class="has-header padding">
   <div class="padding">
-    <h1>Map</h1>
+    <h1 class="title">Select destination and time</h1>
       <p>{{centerLat}}:{{centerLng}}</p>
 	  </div>
       <div ng-show="mapVisible" id="map" class="padding"></div>
