--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -12,7 +12,7 @@
   </ion-tab>
 
     <!-- map Tab -->
-    <ion-tab title="Map" icon="icon ion-map" href="#/tab/map">
+    <ion-tab title="Map" icon="icon ion-map" href="#/tab/map" hidden ="true">
         <ion-nav-view name="tab-map"></ion-nav-view>
     </ion-tab>
 
