--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -1,5 +1,4 @@
-<ion-view title="Map">
-<h1 class="title">Select destination and time</h1>
+<ion-view title="Select destination and time">
   <ion-content class="has-header padding">
   <div class="padding">
     
