--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,7 +1,4 @@
-<ion-view title="Dashboard">
-<ion-header-bar class="bar-dark">
-    <h1 class="title">Login</h1>
-  </ion-header-bar>
+<ion-view title="Login">
   <ion-content class="has-header padding">
 
         <div class="padding">
