--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,4 +1,5 @@
-<ion-view title="Login">
+<ion-view title="Dashboard">
+    <h1 class="title">Login</h1>
   <ion-content class="has-header padding">
 
         <div class="padding">
