--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,5 +1,4 @@
-<ion-view title="Dashboard">
-    <h1 class="title">Login</h1>
+<ion-view title="Login">
   <ion-content class="has-header padding">
 
         <div class="padding">
