--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -2,7 +2,7 @@
   <ion-content class="has-header padding">
   <div class="padding">
 		<label class="item item-input">
-            <input id ="address" type="text" placeholder="Destination:" ng-model="address">
+            <input id ="address" type="text" placeholder="Destination:" ng-model="address" class="combo-input">
           </label>
 	  </div>
       <div ng-show="mapVisible" id="map" class="padding"></div>
