--- a/www/css/style.css
+++ b/www/css/style.css
@@ -10,4 +10,9 @@
 
 .angular-google-map-container { width:100%; height: 400px; }
 
-
+input[type="text"].combo-input {
+  position: absolute; 
+  width: 70px; 
+  border: 1px solid #ccc; 
+  z-index: 100;
+}
