--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -1,9 +1,16 @@
 <ion-view title="Select destination and time">
   <ion-content class="has-header padding">
   <div class="padding">
-		<label class="item item-input">
-            <input id ="address" type="text" placeholder="Destination:" ng-model="address" class="combo-input">
+   <div class="list">
+		<label class="item item-divider">
+            <input id ="address" type="text" placeholder="Destination:" ng-model="address">
+			<select ng-model="data.clientSideValue">
+          <option ng-repeat="item in clientSideList" ng-value="item.value">
+            {{item.text}}
+          </option>
+        </select>
           </label>
+	  </div>
 	  </div>
       <div ng-show="mapVisible" id="map" class="padding"></div>
 	  
