--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -12,7 +12,7 @@
           </label>
 	  </div>
 	  </div>
-      <div ng-show="mapVisible" id="map" class="padding"></div>
+      <div id="map" class="padding"></div>
 	  
 		<div class="padding">
 		<label class="item item-input">
