--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -1,9 +1,5 @@
 <ion-view title="Friends">
   <ion-content class="has-header">
-    <ion-list>
-      <ion-item ng-repeat="friend in friends" type="item-text-wrap" href="#/tab/friend/{{friend(0)}}">
-        {{friend(1)}}
-      </ion-item>	
-    </ion-list>
+    <p>{{friend}}</p>
   </ion-content>
 </ion-view>
