--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -1,5 +1,9 @@
 <ion-view title="Friends">
   <ion-content class="has-header">
-    <p>{{friend}}</p>
+    <ion-list>
+      <ion-item ng-repeat="friend in friends" type="item-text-wrap" href="#/tab/friend/{{friend.gt_id}}">
+        {{friend.last_name}}
+      </ion-item>	
+    </ion-list>
   </ion-content>
 </ion-view>
