--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -1,9 +1,5 @@
 <ion-view title="Friends">
   <ion-content class="has-header">
-    <ion-list>
-      <ion-item ng-repeat="friend in friends" type="item-text-wrap" href="#/tab/friend/{{friend.gt_id}}">
-        {{friend.last_name}}
-      </ion-item>	
-    </ion-list>
+  <p>{{friends}}</p>
   </ion-content>
 </ion-view>
