--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -5,8 +5,8 @@
 		<label class="item item-input">
             <input id ="address" type="text" placeholder="Destination:" ng-model="address">
 			<select ng-model="clientSideValue" id="clientSideValue">
-          <option ng-repeat="item in clientSideList" ng-value="item.value">
-            {{item.text}}
+          <option ng-repeat="item in clientSideList" ng-value="item.loc_id">
+            {{item.loc_name}}
           </option>
         </select>
           </label>
