--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -1,8 +1,19 @@
 <ion-view title="Friends">
   <ion-content class="has-header">
+  <ion-list>
+      <ion-item ng-repeat="friend in friends" ng-if = "friend.grp_id != null" type="item-text-wrap" href="#/tab/friend/{{friend.grp_id}}">
+       Group  {{friend.grp_id}}
+		<ion-list>
+      <ion-item ng-repeat="f in friends" ng-if = "f.grp_id == friend.grp_id" type="item-text-wrap" href="#/tab/friend/{{f.gt_id}}">
+       {{f.first_name}} {{f.last_name}}
+      </ion-item>	
+    </ion-list>
+      </ion-item>	
+    </ion-list>
     <ion-list>
+	Individuals
       <ion-item ng-repeat="friend in friends" type="item-text-wrap" href="#/tab/friend/{{friend.gt_id}}">
-        {{friend.last_name}}
+        {{friend.first_name}} {{friend.last_name}}
       </ion-item>	
     </ion-list>
   </ion-content>
