--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -1,5 +1,6 @@
 <ion-view title="Select destination and time">
   <ion-content class="has-header padding">
+  <form ng-submit="newWalker()">
   <div class="padding">
    <div class="list">
 		<label class="item item-input">
@@ -21,7 +22,8 @@
 </label>
 </div>
 		<div class="padding">
-        <a class="button" href="#/tab/friends">Submit</a>
+		 <button type="submit" class="button button-positive button-block">Submit</button>
 		</div>
+		</form>
   </ion-content>
 </ion-view>
