--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -4,8 +4,8 @@
       <ion-item ng-repeat="friend in friends" ng-if = "friend.grp_id != null" type="item-text-wrap" href="#/tab/friend/{{friend.grp_id}}">
        Group  {{friend.grp_id}}
 		<ion-list>
-      <ion-item ng-repeat="f in friends" ng-if = "f.grp_id == friend.grp_id" type="item-text-wrap" href="#/tab/friend/{{f.gt_id}}">
-       {{f.first_name}} {{f.last_name}}
+      <ion-item ng-repeat="friend in friends" type="item-text-wrap" href="#/tab/friend/{{friend.gt_id}}">
+       {{friend.first_name}} {{friend.last_name}}
       </ion-item>	
     </ion-list>
       </ion-item>	
