--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -1,9 +1,8 @@
 <ion-view title="Friends">
   <ion-content class="has-header">
     <ion-list>
-	Individuals
       <ion-item ng-repeat="friend in friends" type="item-text-wrap" href="#/tab/friend/{{friend.gt_id}}">
-        {{friend.first_name}} {{friend.last_name}}
+        {{friend.name}}
       </ion-item>	
     </ion-list>
   </ion-content>
