--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -2,10 +2,10 @@
   <ion-content class="has-header">
   <ion-list>
 	Groups
-      <ion-item ng-repeat="(key, value) in friends | groupBy: 'grp_id'" ng-if = "friend.grp_id != null" type="item-text-wrap" href="#/tab/friend/{{friend.id}}">
-        Group {{key}}:
+      <ion-item ng-repeat="friend in friends | groupBy: friend.grp_id" ng-if = "friend.grp_id != null" type="item-text-wrap" href="#/tab/friend/{{friend.id}}">
+        Group {{friend.grp_id}}:
 		<ion-list>
-      <ion-item ng-repeat="f in value" type="item-text-wrap" href="#/tab/friend/{{f.id}}">
+      <ion-item ng-repeat="f in friend" type="item-text-wrap" href="#/tab/friend/{{f.id}}">
        {{f.first_name}} {{f.last_name}}
       </ion-item>	
     </ion-list>
