--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -2,7 +2,7 @@
   <ion-content class="has-header">
   <ion-list>
 	Groups
-      <ion-item ng-repeat="(key,value) in friends | groupBy: 'grp_id'" ng-if = "friend.grp_id != null" type="item-text-wrap" href="#/tab/friend/{{friend.id}}">
+      <ion-item ng-repeat="(key,value) in friends | groupBy: 'grp_id'" ng-if = "friend.grp_id != null" type="item-text-wrap" href="#/tab/friend/{{grp_id}}">
         Group {{key}}:
 		<ion-list>
       <ion-item ng-repeat="f in value" type="item-text-wrap" href="#/tab/friend/{{f.id}}">
@@ -13,7 +13,7 @@
     </ion-list>
     <ion-list>
 	Individuals
-      <ion-item ng-repeat="friend in friends" ng-if = "friend.grp_id == null" type="item-text-wrap" href="#/tab/friend/{{friend.id}}">
+      <ion-item ng-repeat="friend in friends" ng-if = "friend.grp_id == null" type="item-text-wrap" href="#/tab/friend/{{friend.gt_id}}">
         {{friend.first_name}} {{friend.last_name}}
       </ion-item>	
     </ion-list>
