--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -2,18 +2,13 @@
   <ion-content class="has-header">
   <ion-list>
 	Groups
-      <ion-item ng-repeat="(key,value) in friends" ng-if = "grp_id != null" type="item-text-wrap" >
+      <ion-item ng-repeat="(key,value) in friends" type="item-text-wrap" >
         Group {{key}}:
-		<ion-list>
-      <ion-item ng-repeat="f in value" type="item-text-wrap" href="#/tab/friend/{{f.id}}">
-       {{f.first_name}} {{f.last_name}}
-      </ion-item>	
-    </ion-list>
       </ion-item>	
     </ion-list>
     <ion-list>
 	Individuals
-      <ion-item ng-repeat="friend in friends" ng-if = "friend.grp_id == null" type="item-text-wrap" href="#/tab/friend/{{friend.gt_id}}">
+      <ion-item ng-repeat="friend in friends" type="item-text-wrap" href="#/tab/friend/{{friend.gt_id}}">
         {{friend.first_name}} {{friend.last_name}}
       </ion-item>	
     </ion-list>
