--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -3,12 +3,12 @@
   <ion-list>
 	Groups
       <ion-item ng-repeat="(key,value) in friends" type="item-text-wrap" >
-        Group {{key}}:
+        Group {{value}}:
       </ion-item>	
     </ion-list>
     <ion-list>
 	Individuals
-      <ion-item ng-repeat="friend in friends" type="item-text-wrap" href="#/tab/friend/{{friend.gt_id}}">
+      <ion-item ng-repeat="friend in friends" ng-if = "friend.grp_id == null" type="item-text-wrap" href="#/tab/friend/{{friend.gt_id}}">
         {{friend.first_name}} {{friend.last_name}}
       </ion-item>	
     </ion-list>
