--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -2,7 +2,7 @@
   <ion-content class="has-header">
   <ion-list>
 	Groups
-      <ion-item ng-repeat="(key,value) in friends | groupBy:'value.grp_id'" type="item-text-wrap" >
+      <ion-item ng-repeat="(key,value) in friends" type="item-text-wrap" >
         Group {{value.grp_id}}:
       </ion-item>	
     </ion-list>
