--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -8,7 +8,7 @@
                    Group {{value.grp_id}}:
                 </h3>
                 <ul id="{{key}}" style="display: none;">
-                    <div ng-repeat="v in value | groupBy: 'grp_id'">
+                    <div ng-repeat="v in value | groupBy: 'v.grp_id'">
                         <br>
                     </div>
                 </ul>
