--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -8,9 +8,7 @@
                    Group {{value.grp_id}}:
                 </h3>
                 <ul id="{{key}}" style="display: none;">
-                    <div ng-repeat="v in value">
-                        <br>
-                    </div>
+                    {{value.first_name}} {{value.last_name}}
                 </ul>
       </ion-item>	
     </ion-list>
