--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -2,14 +2,14 @@
   <ion-content class="has-header">
   <ion-list>
 	Groups
-      <ion-item ng-repeat="friend in friends | groupBy:'grp_id'" ng-if = "grp_id != null" type="item-text-wrap" >
+      <ion-item ng-repeat="(key,value) in friends | groupBy:'value.grp_id'" ng-if = "value.grp_id != null" type="item-text-wrap" >
         
-		<h3 ng-click="$('#{{friend.grp_id}}').slideDown()">    
-                   Group {{friend.grp_id}}:
-                </h3>
-                <ul id="{{friend.grp_id}}" style="display: none;">
-                    {{friend.first_name}} {{friend.last_name}}
+		<a ng-click="expanded = !expanded" href="#"> Group {{value.grp_id}}</a>
+            <p ng-class="{slideDown: expanded}">{   
+                <ul id="{{key}}" style="display: none;">
+                    {{value.first_name}} {{value.last_name}}
                 </ul>
+				</p>
       </ion-item>	
     </ion-list>
     <ion-list>
