--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -2,7 +2,7 @@
   <ion-content class="has-header">
   <ion-list>
 	Groups
-      <ion-item ng-repeat="(key,value) in friends | groupBy:'grp_id'" ng-if = "value.grp_id != null" type="item-text-wrap" >
+      <ion-item ng-repeat="(key,value) in friends | groupBy:'value.grp_id'" ng-if = "value.grp_id != null" type="item-text-wrap" >
         
 		<a ng-click="expanded = !expanded"> Group {{value.grp_id}}</a>
             <p  ng-repeat="usr in value" ng-class="{slideDown: expanded}">
@@ -12,7 +12,7 @@
     </ion-list>
     <ion-list>
 	Individuals
-      <ion-item ng-repeat="(key, item) in friends" ng-if = "item.grp_id == null" type="item-text-wrap" href="#/tab/friend/{{item.gt_id}}">
+      <ion-item ng-repeat="(key, item) in friends" ng-if = "item.grp_id == null" type="item-text-wrap" >
         {{item.first_name}} {{item.last_name}}
       </ion-item>	
     </ion-list>
