--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -2,7 +2,7 @@
   <ion-content class="has-header">
   <ion-list>
 	Groups
-      <ion-item ng-repeat="(key,value) in friends | groupBy:'value.grp_id'" ng-if = "value.grp_id != null" type="item-text-wrap" >
+      <ion-item ng-repeat="(key,value) in friends" ng-if = "value.grp_id != null" type="item-text-wrap" >
         
 		<a ng-click="expanded = !expanded"> Group {{value.grp_id}}</a>
             <p  ng-repeat="usr in value" ng-class="{slideDown: expanded}">
