--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -2,18 +2,16 @@
   <ion-content class="has-header">
   <ion-list>
 	Groups
-      <ion-item ng-repeat="(key,value) in friends" ng-if = "value.grp_id != null" type="item-text-wrap" >
+      <ion-item ng-repeat="(key,value) in friends" type="item-text-wrap" >
         
 		<a ng-click="expanded = !expanded"> Group {{key}}</a>
-            <p  ng-repeat="usr in value" ng-class="{slideDown: expanded}">
-                    {{usr.first_name}} {{usr.last_name}}
-				</p>
+          
       </ion-item>	
     </ion-list>
     <ion-list>
 	Individuals
-      <ion-item ng-repeat="(key, item) in friends" ng-if = "key == null" type="item-text-wrap" >
-        {{item.first_name}} {{item.last_name}}
+      <ion-item ng-repeat="(key, item) in friends" type="item-text-wrap" >
+       
       </ion-item>	
     </ion-list>
   </ion-content>
