--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -2,16 +2,17 @@
   <ion-content class="has-header">
   <ion-list>
 	Groups
-      <ion-item ng-repeat="(key,value) in friends" type="item-text-wrap" >
+      <ion-item ng-repeat="(key,value) in friends" ng-if = "key != null" type="item-text-wrap" >
         
 		<a ng-click="expanded = !expanded"> Group {{key}}</a>
-          
+		{{value}}
+            
       </ion-item>	
     </ion-list>
     <ion-list>
 	Individuals
-      <ion-item ng-repeat="(key, item) in friends" type="item-text-wrap" >
-       
+      <ion-item ng-repeat="(key, item) in friends" ng-if = "key == null" type="item-text-wrap" >
+        {{item.first_name}} {{item.last_name}}
       </ion-item>	
     </ion-list>
   </ion-content>
