--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -2,20 +2,21 @@
   <ion-content class="has-header">
   <ion-list>
 	Groups
-      <ion-item ng-repeat="(key,value) in friends" ng-if = "key != null" type="item-text-wrap" >
-        
+      <ion-item ng-repeat="(key,value) in friends" type="item-text-wrap" >
+        <div ng-if = "key != null">
 		<a ng-click="expanded = !expanded"> Group {{key}}</a>
             <p  ng-repeat="usr in value" ng-class="{slideDown: expanded}">
-                    usr
+                    {{usr}}
 				</p>
+				</div>
       </ion-item>	
     </ion-list>
     <ion-list>
 	Individuals
       <ion-item ng-repeat="(key, item) in friends" type="item-text-wrap" >
-	  <p  ng-repeat="usr in item">
-                    usr
-				</p>
+	  <div  ng-repeat="usr in item">
+                    {{usr}}
+				</div>
       </ion-item>	
     </ion-list>
   </ion-content>
