--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,7 +5,7 @@
 -->
 <ion-tabs class="tabs-icon-top">
 
-
+<div ng-show="False">
   <!-- dash Tab -->
   <ion-tab title="Dashboard" icon="icon ion-home" href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
@@ -28,5 +28,5 @@
   <ion-tab title="Account" icon="icon ion-gear-b" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
-
+</div>
 </ion-tabs>
