--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,7 +3,29 @@
   Each tab's child <ion-nav-view> directive will have its own 
   navigation history that also transitions its views in and out.
 -->
-<div ng-show="False">
+<ion-tabs class="tabs tabs-item-hide">
 
-</div>
+  <!-- dash Tab -->
+  <ion-tab title="Dashboard" icon="icon ion-home" href="#/tab/dash">
+    <ion-nav-view name="tab-dash"></ion-nav-view>
+  </ion-tab>
 
+    <!-- map Tab -->
+    <ion-tab title="Map" icon="icon ion-map" href="#/tab/map">
+        <ion-nav-view name="tab-map"></ion-nav-view>
+    </ion-tab>
+
+
+    <!-- Adopt Tab -->
+  <ion-tab title="Friends" icon="icon ion-heart" href="#/tab/friends">
+    <ion-nav-view name="tab-friends"></ion-nav-view>
+  </ion-tab>
+
+
+  <!-- About Tab -->
+  
+  <ion-tab title="Account" icon="icon ion-gear-b" href="#/tab/account">
+    <ion-nav-view name="tab-account"></ion-nav-view>
+  </ion-tab>
+
+</ion-tabs>
