--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,6 +1,8 @@
 <ion-view title="Login">
   <ion-content class="has-header padding">
-
+	 <div class="padding">
+	 Welcome {{user.name}}
+	 </div>
         <div class="padding">
           <label class="item item-input">
             <input type="text" placeholder="Username:" ng-model="user.name">
