--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -2,10 +2,10 @@
   <ion-content class="has-header padding">
         <div class="padding">
           <label class="item item-input">
-            <input type="text" placeholder="Username:" ng-model="user.name">
+            <input type="text" placeholder="Username:" ng-model="name">
           </label>
 		  <label class="item item-input">
-            <input type="password" placeholder="Password:" ng-model="user.pwd">
+            <input type="password" placeholder="Password:" ng-model="pwd">
           </label>
         </div>
 		<div class="padding">
