--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -1,7 +1,7 @@
 <ion-view title="Select destination and time">
   <ion-content class="has-header padding">
   <div class="padding">
-	 Welcome {{user.name}}
+	 Welcome {{name}}
 	 </div>
   <form ng-submit="newWalker()">
   <div class="padding">
