--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,6 +1,6 @@
 <ion-view title="Login">
   <ion-content class="has-header padding">
-  <form ng-submit="newWalker()">
+  <form ng-submit="login()">
         <div class="padding">
           <label class="item item-input">
             <input type="text" placeholder="Username:" ng-model="name">
