--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -3,7 +3,7 @@
   <form ng-submit="login()">
         <div class="padding">
           <label class="item item-input">
-            <input type="text" placeholder="Username:" ng-model="name">
+            <input type="text" placeholder="Username:" id = "name" ng-model="name">
           </label>
 		  <label class="item item-input">
             <input type="password" placeholder="Password:" ng-model="pwd">
