--- a/www/templates/tab-map.html
+++ b/www/templates/tab-map.html
@@ -1,7 +1,7 @@
 <ion-view title="Select destination and time">
   <ion-content class="has-header padding">
   <div class="padding" >
-	 Welcome <label id = "name" ng-model ="name"/>{{name}}
+	 Welcome <label id = "name" ng-model ="name"/>
 	 </div>
   <form ng-submit="newWalker()">
   <div class="padding">
@@ -21,7 +21,7 @@
 		<div class="padding">
 		<label class="item item-input">
   <span class="input-label">Time</span>
-  <input type="time">
+  <input type="time" id ="time">
 </label>
 </div>
 		<div class="padding">
