--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -4,7 +4,8 @@
 	Groups
       <ion-item ng-repeat="(key,value) in friends" type="item-text-wrap" >
 		<div ng-click="expanded = !expanded"> Group {{key}} 
-		<button ng-click="joinGroup(key);">Join</button> </div>
+		 </div> <button ng-show="showJoin" ng-click="joinGroup(key);">Join</button>
+		 <button ng-show="!showJoin && key == grp_id" ng-click="leaveGroup(key);">Leave</button>
             <p  ng-repeat="usr in value" ng-class="{slideDown: expanded}">
                     {{usr.first_name}} {{usr.last_name}} 
 				</p>
@@ -14,7 +15,7 @@
 	Individuals
       <ion-item ng-repeat="walker in walkers" ng-if="walker.grp_id == null" type="item-text-wrap" >
                     {{walker.first_name}} {{walker.last_name}}
-					
+					 <button ng-show="showJoin" ng-click="joinWalker(key);">Join</button>
       </ion-item>	
     </ion-list>
   </ion-content>
