--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -13,9 +13,9 @@
     </ion-list>
     <ion-list>
 	Individuals
-      <ion-item ng-repeat="walker in walkers" ng-if="walker.grp_id == null" type="item-text-wrap" >
+      <ion-item ng-repeat="walker in walkers" ng-if="walker.grp_id == null && walker.gt_id != name" type="item-text-wrap" >
                     {{walker.first_name}} {{walker.last_name}}
-					 <button ng-show="showJoin && walker.gt_id != name" ng-click="joinWalker(key);">Join</button>
+					 <button ng-show="showJoin" ng-click="joinWalker(key);">Join</button>
       </ion-item>	
     </ion-list>
   </ion-content>
