--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,18 +1,21 @@
 /* Empty. Add your own CSS if you like */
 #map {
     width: 100%;
-    height: 50%;
+    height: 100%;
 }
 
 .scroll {
     height: 100%;
 }
 
-.angular-google-map-container { width:100%; height: 400px; }
+.angular-google-map-container { width:100%; height: 50%; }
 p{
 display:none;
 }
-
+body, html {
+  height: 100%;
+  width: 100%;
+}
 .tabs-hide .tabs {
     display: none;
 }
