--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,13 +1,14 @@
 /* Empty. Add your own CSS if you like */
 #map {
     width: 100%;
-    height: 100%;
+    height: 50%;
 }
 
 .scroll {
     height: 100%;
 }
 
+.angular-google-map-container { width:100%; min-height: 50px; height: 50%; }
 p{
 display:none;
 }
