--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -6,7 +6,7 @@
             <input type="text" placeholder="Username:" id = "name" ng-model="name">
           </label>
 		  <label class="item item-input">
-            <input type="password" placeholder="Password:" ng-model="pwd">
+            <input type="password" placeholder="Password:" id = "pwd" ng-model="pwd">
           </label>
         </div>
 		<div class="padding">
