--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -1,7 +1,8 @@
 <ion-view title="Friends">
   <ion-content class="has-header">
   <ion-list>
-	<img src="/img/group.jpeg" height="1%" width="1%"> Groups
+	<div class="item item-avatar">
+    <img src="img/group.jpg"> Groups</div>
       <ion-item ng-repeat="(key,value) in friends" type="item-text-wrap" >
 		<div ng-click="expanded = !expanded"> Group {{key}} 
 		 <button class="button button-small button-positive pull-right" ng-show="showJoin" ng-click="joinGroup(key);">Join</button>
@@ -14,7 +15,8 @@
       </ion-item>	
     </ion-list>
     <ion-list>
-	<img src="/img/ind.jpeg" height="1%" width="1%">Individuals
+	<div class="item item-avatar">
+    <img src="img/ind.jpg"> Individuals</div>
       <ion-item ng-repeat="walker in walkers" ng-if="walker.grp_id == null && walker.gt_id != name" type="item-text-wrap" >
                     {{walker.first_name}} {{walker.last_name}}
 					 <button class="button button-small button-positive pull-right" ng-show="showJoin" ng-click="joinWalker(walker.gt_id);">Join</button>
