--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -3,11 +3,12 @@
   <ion-list>
 	<div class="item item-avatar">
     <img src="img/group.jpg"> Groups</div>
-      <ion-item ng-repeat="(key,value) in friends" type="item-text-wrap" >
+      <ion-item class="item-button-right" ng-repeat="(key,value) in friends" type="item-text-wrap" >
 		<div ng-click="expanded = !expanded"> Group {{key}} 
-		<h5>{{value[0].dest_name}} {{value[0].start_time | date:'hh:mm a'}}</h5>
+		
 		 <button class="button button-small button-positive" ng-show="showJoin" ng-click="joinGroup(key);">Join</button>
 		 <button class="button button-small button-positive" ng-show="!showJoin && key == grp_id" ng-click="leaveGroup(key);">Leave</button>
+		 <h5>{{value[0].dest_name}} {{value[0].start_time | date:'hh:mm a'}}</h5>
 		 </div>
             <p  ng-repeat="usr in value" ng-class="{slideDown: expanded}">
                     {{usr.first_name}} {{usr.last_name}} 
